JG-2007-05-30-0: Bugfix:    Fixed bugs/issuezilla/1104 with Gridengine 6.0u??.
                            Improved error handling for calendar deletion.
                 Review:    CR

JG-2007-05-29-1: Bugfix:    Fixed qsub/override test, fixed AR handling in 
                            multiple modules, improved error output in 
                            bugs/issuezilla/440
                 Review:    RD

LP-2007-05-29-0: Enhancem.: Added new check 'jgdi_junit' to run all JGDI junit 
                            tests. 
                            Note: Testsuite hosts must have ant specified and it 
                                  has to have junit.jar in it's lib directory.
                 Review:    JG

RD-2007-05-29-0: Enhancem:  Added messages changes for AR
                 Review:    JG

PJ-2007-05-25-0: Bugfix:    Added message to submit_job

JG-2007-05-29-0: Bugfix:    Fixed test for qsub with start time.
                            Fixed set_pe.
                            Fixed handle_vi_edit with dashes in expected 
                            patterns.
                 Review:    RD

PJ-2007-05-25-0  Bugfix:    Added message to submit_job
                            Added tests to advance_reservation test
                            Moved AR spooling test to spooling test

RD-2007-05-25-1: Bugfix:    Fixed advance_reservation test
                 Review:    JG

RN-2007-05-25-0: Bugfix   : o Modified qconf -sds test to test CR 6522273
                 Review:    JG

RD-2007-05-25-0: Enhancem.: Enhanced test to cover Issue 2250
                 Review:    JG

RN-2007-05-23-0: Enhancem.: o Added new test for RFE 6355875 (issue no 916)

JG-2007-05-23-1: Bugfix:    Fixed cleanup function of consumable resources test.

JG-2007-05-23-0: Bugfix:    Fixed reporting queue state test.
                 Enhancem.: Extended qconf -purge tests.
                 Review:    RD

RD-2007-05-22-0: Bugfix:    Fixed IZ 2050 after function signature changes
