@@ -1,3 +1,7 @@
+JG-2007-06-01-0: Enhancem.: Made shadowd_migrate test more fault tolerant 
+                            to slow NFS.
+                 Review:    CR
+
 JG-2007-05-30-0: Bugfix:    Fixed bugs/issuezilla/1104 with Gridengine 6.0u??.
                             Improved error handling for calendar deletion.
                  Review:    CR
